[gd_scene load_steps=2 format=3 uid="uid://bovat2846wx1q"]

[ext_resource type="Script" uid="uid://cmd1o5in3n8tw" path="res://conversation_log.gd" id="1_3fgff"]

[node name="ConversationLog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fgff")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 274.0
offset_bottom = 645.0

[node name="DialogueLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LinesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2

[connection signal="meta_clicked" from="VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_meta_clicked"]
